[tool.poetry]
name = "assort"
version = "0.1.0"
description = ""
authors = ["James Kerivan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.19"
starlette-context = "^0.3.6"
pydantic = "^2.1.1"
alembic = "^1.11.2"
psycopg2-binary = "^2.9.7"
python-decouple = "^3.8"
psycopg2 = "^2.9.7"
python-dotenv = "^1.0.0"
twilio = "^8.5.0"
python-multipart = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
